compiler-core/src/parse/snapshots/gleam_core__parse__tests__use_invalid_assignments.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    use fn <- result.try(get_username())\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn main() {
    use fn <- result.try(get_username())
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:9
  │
3 │     use fn <- result.try(get_username())
  │         ^ I was expecting a pattern after this
