compiler-core/src/parse/snapshots/gleam_core__parse__tests__wrong_record_access_pattern.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  case wibble {\n    wibble.thing -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case wibble {
    wibble.thing -> 1
  }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:5
  │
4 │     wibble.thing -> 1
  │     ^^^^^^^^^^^^ Invalid pattern

I'm expecting a pattern here
Hint: A pattern can be a constructor name, a literal value
or a variable to bind a value to, etc.
See: https://tour.gleam.run/flow-control/case-expressions/
